2005-05-30  John Wiegley  <johnw@newartisans.com>

	* eshell/em-cmpl.el, eshell/em-dirs.el, eshell/em-glob.el,
	eshell/em-unix.el, eshell/esh-ext.el, eshell/esh-io.el,
	eshell/esh-util.el, eshell/esh-var.el: Changed all uses of
	`directory-sep-char' to ?/, and all uses of `string-to-int' to
	`string-to-number'.

2005-05-30  Jay Belanger  <belanger@truman.edu>

	* calc/calc.el (calc-bug-address): Fix docstring.
	(calc-window-hook, calc-trail-window-hook): New variables.
	(calc-trail-display): Restore use of calc-trail-window-hook.
	(calc): Restore use of calc-window-hook.

2005-05-31  Masatake YAMATO  <jet@gyve.org>

	* emacs-lisp/find-func.el (find-function-noselect): Handle subroutines.

	* help-fns.el (help-C-file-name): Add autoload mark for
	`find-function-noselect'.

2005-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/tex-mode.el (tex-compile-commands, tex-compile)
	(tex-start-tex): Undo all but the last part of the 2005-05-28 change.

2005-05-30  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/diary-lib.el (mark-included-diary-files): Only kill
	included diary buffer if it was not already being visited.
	Reported by Stephen Berman <Stephen.Berman@gmx.net>.

	* calendar/icalendar.el (top-level): Do not require 'appt.

	* mail/supercite.el (sc-select-attribution): Only use a list
	element from sc-attrib-selection-list if it returns a string.
	Reported by Davide G. M. Salvetti <salve@debian.org>.

2005-05-30  Juanma Barranquero  <lekktu@gmail.com>

	* thumbs.el (thumbs-thumbname): The resulting thubname now
	includes a hash value to improve its uniqueness, and has a ".jpg"
	extension.  Also, it is now a valid filename on all systems.
	(thumbs-make-thumb): Use `let', not `let*'.
	(thumbs-show-thumbs-list): Check for JPEG availability.

2005-05-30  Richard M. Stallman  <rms@gnu.org>

	* filesets.el (filesets-menu-ensure-use-cached):
	Prevent warning when emacs-version>= is undefined.

	* printing.el (pr-interactive-n-up): Use string-to-number.
