@@ -1,3 +1,13 @@
+2005-05-31  Richard M. Stallman  <rms@gnu.org>
+
+	* progmodes/vhdl-mode.el (vhdl-fill-region): Test ARG, not
+	INTERACTIVE.
+	(vhdl-emacs-21): Doc fix.
+	(vhdl-mode): Unconditionally set comment-padding.
+	(vhdl-fixup-whitespace-region): Insert spaces only where
+	there are none.
+	(vhdl-statistics-buffer): Make the Emacs 21 behavior universal.
+
 2005-05-30  John Wiegley  <johnw@newartisans.com>
 
 	* eshell/em-cmpl.el, eshell/em-dirs.el, eshell/em-glob.el,
